# data-science-boilerplate

./: LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: index.md
notebooks/: teste.ipynb
src/data/: make_dataset.py
