[tool.poetry]
name = "ds-project"
version = "0.1.0"
description = "Projeto base para Data Science"
authors = ["Marlos Ribeiro <marlos.mgrb@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
