[tool.poetry]
name = "ds-project"
version = "0.1.0"
description = "Projeto base para Data Science"
authors = ["Marlos Ribeiro <marlos.mgrb@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
ruff = "^0.3.5"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
